--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -7,3 +7,7 @@
 @import 'megaMenu.css';
 @import 'navMenu.css';
 @import 'typo.css';
+@import 'navMenuMobile.css';
+@import 'megaMenuMobile.css';
+@import 'responsive.css';
+@import 'megaMenuAll.css';
