--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -11,3 +11,5 @@
 @import 'megaMenuMobile.css';
 @import 'responsive.css';
 @import 'megaMenuAll.css';
+@import 'onboard.css';
+@import 'common.css';
